# med

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/skills/med-desktop-development/: SKILL.md
.codex/skills/med-desktop-development/agents/: openai.yaml
src/: App.tsx  MarkdownEditor.tsx  exporters.ts  i18n.ts  markdown.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
