[package]
name = "med"
version = "0.1.0"
description = "A fast, focused Markdown editor"
authors = ["Pablo Medina"]
license = "MIT"
edition = "2021"

[lib]
name = "med_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "med"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"

